# multi-agent-wsi

./: README.md
create_wsi_kl/: README.md  SYSTEM_TRANSFORMATION.md  pyproject.toml  report.md  wsi_cancer_description.md
create_wsi_kl/knowledge/: pathology_guidelines.txt  user_preference.txt  wsi_cancer_data.txt
create_wsi_kl/src/create_wsi_kl/: crew.py  init_llm.py  main.py
create_wsi_kl/src/create_wsi_kl/config/: agents.yaml  tasks.yaml
