[project]
name = "create_wsi_kl"
version = "0.1.0"
description = "WSI Cancer Description Multi-Agent System using crewAI - Generate comprehensive pathological descriptions for cancer analysis"
authors = [{ name = "Medical AI Team", email = "medical-ai@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0",
    "docling>=2.40.0",
    "google-generativeai>=0.8.5",
]

[project.scripts]
create_wsi_kl = "create_wsi_kl.main:run"
run_crew = "create_wsi_kl.main:run"
train = "create_wsi_kl.main:train"
replay = "create_wsi_kl.main:replay"
test = "create_wsi_kl.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
